--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,8 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = fastled/FastLED@^3.4.0
+lib_deps = 
+	fastled/FastLED@^3.4.0
+	arduino-libraries/NTPClient@^3.1.0
+	lorol/LittleFS_esp32@^1.0.6
+	bblanchon/ArduinoJson@^6.18.5
