--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+monitor_speed = 115200
+upload_speed = 115200
 lib_deps = 
 	fastled/FastLED@^3.4.0
 	arduino-libraries/NTPClient@^3.1.0
