--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32doit-devkit-v1]
+;upload_protocol = espota
+;upload_port = 192.168.2.82
+;iotWordClock.fritz.box
+upload_speed = 115200
+
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-upload_speed = 115200
 lib_deps = 
 	fastled/FastLED@^3.4.0
 	arduino-libraries/NTPClient@^3.1.0
