--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32doit-devkit-v1]
-;upload_protocol = espota
-;upload_port = 192.168.2.82
+; START ---- OTA-Upload
+upload_protocol = espota
+upload_port = 192.168.2.82
 ;iotWordClock.fritz.box
-upload_speed = 115200
+; END ---- OTA-Upload
 
+upload_speed = 115200
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
@@ -23,6 +25,7 @@ lib_deps =
 	arduino-libraries/NTPClient@^3.1.0
 	lorol/LittleFS_esp32@^1.0.6
 	bblanchon/ArduinoJson@^6.18.5
-    https://github.com/AaronLiddiment/LEDMatrix
-    https://github.com/AaronLiddiment/ledtext
-    https://github.com/tzapu/WiFiManager
+	https://github.com/AaronLiddiment/LEDMatrix
+	https://github.com/AaronLiddiment/ledtext
+	https://github.com/tzapu/WiFiManager
+	knolleary/PubSubClient@^2.8
