Tetris first step working

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@
 
 [env:esp32doit-devkit-v1]
 ; START ---- OTA-Upload
-upload_protocol = espota
-upload_port = 192.168.2.82
+;upload_protocol = espota
+;upload_port = 192.168.2.82
 ;iotWordClock.fritz.box
 ; END ---- OTA-Upload
 
